# cyberpixie

./: .gitignore  Cargo.toml  Makefile  build.rs  dprint.json  flake.nix  rust-toolchain.toml  shell.nix
application/rust/: Cargo.toml
application/rust/src/: device_handle.rs  lib.rs
boards/common/: Cargo.toml
boards/common/src/: lib.rs  render.rs
boards/esp32/: Cargo.toml
boards/esp32/.cargo/: config.toml
boards/esp32/common/: Cargo.toml
boards/esp32/common/src/: ble.rs  lib.rs  render.rs  wifi.rs
boards/esp32/esp32c3/: Cargo.toml  build.rs  shell.nix
boards/esp32/esp32c3/.cargo/: config.toml
boards/esp32/esp32c3/examples/: ble.rs  rainbow.rs
boards/esp32/esp32c3/src/: lib.rs  main.rs
boards/esp32/esp32s3/: Cargo.toml  shell.nix
boards/esp32/esp32s3/.cargo/: config.toml
boards/esp32/esp32s3/examples/: ble.rs  rainbow.rs
boards/esp32/esp32s3/scripts/: setup-rust-toolchain.sh
boards/esp32/esp32s3/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  time.rs
crates/app/src/asynch/: app.rs  mod.rs
crates/app/tests/: main.rs  std_network.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  errors.rs  events.rs  image_reader.rs  images.rs  lib.rs  service.rs  storage.rs  time.rs
crates/core/src/app/: hw_events_task.rs  image_task.rs  mod.rs  network_task.rs
crates/core/src/io/: image_reader.rs  mod.rs
crates/core/src/proto/: mod.rs  packet.rs  types.rs
crates/core/src/storage/: image_reader.rs  mod.rs
crates/core/tests/: block_reader.rs  image_reader.rs
crates/nb_utils/: Cargo.toml  README.md
crates/nb_utils/src/: lib.rs  tests.rs
crates/network/: Cargo.toml
crates/network-nal/: Cargo.toml
crates/network-nal/src/: connection.rs  io.rs  lib.rs
crates/network/src/: client.rs  connection.rs  io.rs  lib.rs  message.rs  network_part.rs  tokio.rs
crates/network/src/asynch/: client.rs  mod.rs  tokio.rs
crates/network/src/blocking/: client.rs  connection.rs  mod.rs
crates/network/tests/: simple_service.rs
crates/proto/: Cargo.toml
crates/proto/src/: error.rs  headers.rs  lib.rs  message.rs  nb.rs  packet.rs  payload.rs  service.rs  tests.rs  types.rs
crates/proto/src/ng/: messages.rs  mod.rs  transport.rs  types.rs
crates/proto/src/service_ng/: message.rs  mod.rs
crates/proto/src/tests/: mod.rs
crates/proto/src/transport/: mod.rs  packet.rs
crates/std-transport/: Cargo.toml
crates/std-transport/src/: lib.rs  ng.rs
crates/std-transport/src/ng/: connection.rs  mod.rs
crates/std-transport/tests/: simple_service.rs
crates/stdio-serial/: Cargo.toml
crates/stdio-serial/src/: bare_metal_impl.rs  dummy_impl.rs  lib.rs  std_impl.rs
crates/storage/: Cargo.toml
crates/storage/src/: image_reader.rs  lib.rs  test_utils.rs
crates/storage/tests/: block_reader.rs  image_reader.rs  main.rs
crates/wifi/: Cargo.toml
crates/wifi/src/: lib.rs
esp8266-softap/: Cargo.toml
esp8266-softap/src/: adapter.rs  error.rs  lib.rs  softap.rs
esp8266-softap/src/tests/: mod.rs  serial.rs
esp8266/serial/: Cargo.toml
esp8266/serial/src/: adapter.rs  lib.rs  main.rs  parser.rs  softap.rs
esp8266/serial/src/tests/: mod.rs  serial.rs
firmware/: Cargo.toml  Makefile  build.rs
firmware/.cargo/: config
firmware/esp32-idf/: Cargo.toml  partitions.csv  shell.nix
firmware/esp32-idf/.cargo/: config.toml
firmware/esp32-idf/examples/: frame_rate.rs  images.rs  render.rs  splash.rs  tcp_echo.rs  threaded_render.rs
firmware/esp32-idf/src/: lib.rs  main.rs  render.rs
firmware/esp32-idf/src/storage/: mod.rs  registry.rs
firmware/esp32c3/: .envrc  Cargo.toml  partitionTable.csv  sdkconfig.defaults  shell.nix
firmware/esp32c3/.cargo/: config.toml
firmware/esp32c3/examples/: frame_rate.rs  framebuffer.rs  images.rs  rainbow.rs  render.rs  splash.rs  storage.rs  tcp_echo.rs  threaded_render.rs  wifi.rs
firmware/esp32c3/src/: board.rs  board_impl.rs  lib.rs  main.rs  network.rs  render.rs  wifi.rs
firmware/esp32c3/src/splash/: mod.rs  wandering_light.rs
firmware/esp32c3/src/storage/: block_reader.rs  image_reader.rs  mod.rs  registry.rs
firmware/examples/: esp32.rs  retransmitter.rs  slave.rs  softap.rs  splash.rs
firmware/openocd/: jlink.cfg  rvlink.cfg
firmware/src/: allocator.rs  app.rs  config.rs  generated.rs  irq.rs  lib.rs  macros.rs  main.rs  network.rs  serial_log.rs  stdio.rs  stdout.rs  strip.rs  time.rs  transport.rs
firmware/src/splash/: wandering_light.rs
firmware/src/storage/: mod.rs
old/: .envrc  Cargo.toml  rust-toolchain.toml  shell.nix  taplo.toml
old/.cargo/: config.toml
old/application/: DeviceInfo.qml  UploadImage.qml  cyberpixie-app.pro  filesreader.cpp  filesreader.h  main.qml  qtquickcontrols2.conf
old/application/rust/: Cargo.toml
old/application/rust/src/: device_handle.rs
old/assets/: nyan_cat_24.raw
old/boards/esp32/esp32c3/: Cargo.toml  shell.nix
old/boards/esp32/esp32s3/: Cargo.toml  rust-toolchain.toml
old/crates/app/: Cargo.toml
old/crates/app/src/: lib.rs
old/crates/core/: Cargo.toml
old/crates/core/src/: events.rs  lib.rs  time.rs
old/crates/esp8266-softap/: Cargo.toml
old/crates/esp8266-softap/src/: lib.rs
old/crates/network/: Cargo.toml
old/crates/network/src/: client.rs  message.rs
old/crates/proto/: Cargo.toml
old/crates/proto/src/: error.rs  lib.rs  service.rs
old/crates/std-transport/: Cargo.toml
old/crates/storage/: Cargo.toml
old/crates/storage/src/: test_utils.rs
old/firmware/: Cargo.toml  rust-toolchain.toml
old/firmware/.cargo/: config
old/firmware/openocd/: jlink.cfg  openocd.gdb
old/firmware/src/: config.rs  irq.rs  lib.rs  main.rs
old/firmware/src/splash/: mod.rs  wandering_light.rs
old/firmware/src/storage/: mod.rs  types.rs
old/utils/board/: Cargo.toml
old/utils/cli/src/: main.rs
old/utils/image_sender/: Cargo.toml
old/utils/image_sender/src/: lib.rs  main.rs
proto/: Cargo.toml
proto/src/: lib.rs  packet.rs  tests.rs  types.rs
src/: lib.rs  (+9 more)
utils/cli/: Cargo.toml
utils/cli/src/: lib.rs  main.rs
ws2812b/: Cargo.toml  build.rs
ws2812b/src/: lib.rs  main.rs  naive.rs
(+81 files in other folders)
