[package]
name = "esp8266-softap"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7"
embedded-hal = "0.2"
nb = "1"
nom = { version = "6.1", default-features = false }
# aurora-led-firmware = { path = "../firmware" }

[dev-dependencies]
anyhow = "1.0"
serialport = "4"
