[package]
name = "cyberpixie-firmware"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2018"
resolver = "2"

[dependencies]
embedded-hal = "0.2"
embedded-sdmmc = "0.3"
endian_codec = "0.1"
heapless = "0.7"
nb = "1.0"
smart-leds = "0.3"

gd32vf103xx-hal = "0.4"
riscv = "0.6"
riscv-rt = "0.8"
ws2812-spi = { version = "0.4" }
void = { version = "1.0", default-features = false }

# stdio-serial = { path = "../crates/stdio-serial" }
stdio-serial = { path = "../crates/stdio-serial", features = [ "dprint"] }
esp8266-softap = { path = "../crates/esp8266-softap" }
cyberpixie = { path = "../crates/core" }
