[workspace]
resolver = "2"

members = [
  # "application/rust",
  "boards/esp32/common",
  "boards/esp32/esp32c3",
  # "boards/esp32/esp32s3",
  "crates/app",
  "crates/core",
  "crates/network",
  "crates/storage",
  "utils/cli",
  "utils/board",
]

default-members = [
  "crates/app",
  "crates/core",
  "crates/network",
  "crates/storage",
  "utils/cli",
  "utils/board",
]

exclude = ["application/rust"]

[workspace.dependencies]
# Workspace crates
cyberpixie-app = { path = "crates/app" }
cyberpixie-core = { path = "crates/core" }
cyberpixie-embedded-storage = { path = "crates/storage" }
cyberpixie-esp-common = { path = "boards/esp32/common" }
cyberpixie-network = { path = "crates/network" }

# Common dependencies
displaydoc = { version = "0.2", default-features = false }
endian_codec = "0.1"
env_logger = "0.10"
heapless = { version = "0.8" }
image = "0.24"
log = "0.4"
nb = "1.0"
no-std-net = { version = "0.6" }
postcard = { version = "1.0", default-features = false, features = [
  "experimental-derive",
] }
rgb = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
tokio = { version = "1" }
static_cell = { version = "2.0", features = ["nightly"] }

# Portable atomics
portable-atomic = { version = "1.5", default-features = false }
portable_atomic_enum = { version = "0.3.0", features = ["portable-atomic"] }
# need this to activate portable-atomic on AtomicWaker even though we don't use it
futures-util = { version = "0.3.28", default-features = false, features = [
  "portable-atomic",
] }
# need this to activate portable-atomic on AtomicWaker used by embedded-svc even though we don't use it
atomic-waker = { version = "1.1.2", default-features = false, features = [
  "portable-atomic",
] }

# ESP dependencies
embassy-executor = { version = "0.4.0", features = [
  "nightly",
  "integrated-timers",
  "executor-thread",
] }
embassy-net = { version = "0.3.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ethernet",
  "proto-ipv6",
] }
embassy-sync = { version = "0.3.0", features = ["nightly"] }
embassy-time = { version = "0.2.0" }
embedded-hal-async = { version = "=1.0.0-rc.2" }
# embedded-io = { version = "0.5" }
# embedded-io-adapters = "0.5.0"
# embedded-io-async = "0.5.0"
embedded-io = { version = "0.4", features = ["async"] }
embedded-storage = { version = "0.3" }
embedded-svc = { version = "0.26", default-features = false }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "b6b10f8", features = [
  "wifi",
  "embassy-net",
  "ipv6",
  "ble",
] }
esp32c3-hal = { version = "0.14", features = [
  "embassy",
  "async",
  "embassy-executor-thread",
] }
esp32s3-hal = { version = "0.14", features = ["async", "embassy"] }
smoltcp = { version = "0.11.0", default-features = false, features = [
  "proto-ipv4",
  "proto-ipv6",
] }
ws2812-async = { version = "0.1.0", git = "https://github.com/alekseysidorov/ws2812-async.git", rev = "6d8af8e" }
