[package]
name = "cyberpixie-app"
version = "0.3.0"
edition = "2021"

[dependencies]
cyberpixie-core = { workspace = true }
cyberpixie-network = { workspace = true }
embedded-io = "0.4"
embedded-nal = "0.6"
heapless = { workspace = true }
log = "0.4"
nb = "1.0"
nb-utils = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
cyberpixie-network = { workspace = true, features = ["tokio"] }
cyberpixie-embedded-storage = { workspace = true, features = ["std"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
env_logger = "0.10"
