[package]
name = "cyberpixie-app"
version = "0.3.0"
edition = "2021"

[dependencies]
cyberpixie-core = { workspace = true }
cyberpixie-network = { workspace = true }
# embedded-io-async = { workspace = true }
embedded-io = { workspace = true }
heapless = { version = "0.7" }
log = "0.4"
nb = "1.0"
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
cyberpixie-embedded-storage = { workspace = true, features = ["std"] }
cyberpixie-network = { workspace = true, features = ["tokio"] }
env_logger = "0.10"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
