[package]
name = "cyberpixie-core"
version = "0.3.0"
edition = "2021"

[dependencies]
displaydoc = { version = "0.2", default-features = false }
embedded-io = { workspace = true }
endian_codec = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
postcard = { workspace = true }
rgb = { workspace = true }
serde = { workspace = true }

[features]
std = ["embedded-io/std"]
