[package]
name = "cyberpixie-network"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cyberpixie-core = { workspace = true }
heapless = { workspace = true }
embedded-nal = "0.6"
embedded-io = "0.4"
log = "0.4"
nb = "1"

[dev-dependencies]
env_logger = "0.10"
std-embedded-nal = "0.1.3"
nb-utils = { workspace = true, features = ["std"] }
