[package]
name = "cyberpixie-network"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cyberpixie-core = { workspace = true }
embedded-io = "0.4"
embedded-nal = "0.6"
heapless = { workspace = true }
log = "0.4"
nb = "1"

[dev-dependencies]
env_logger = "0.10"
nb-utils = { workspace = true, features = ["std"] }
std-embedded-nal = "0.1.3"
