[package]
name = "cyberpixie-network"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyberpixie-core = { workspace = true }
embedded-io = { version = "0.4", features = ["async"] }
heapless = { version = "0.7" }
log = "0.4"
no-std-net = { version = "0.6" }
smoltcp = { workspace = true, optional = true }
tokio = { version = "1", features = ["net"], optional = true }

[dev-dependencies]
env_logger = "0.10"

[features]
default = []
std = ["embedded-io/std", "no-std-net/std", "cyberpixie-core/std"]
tokio = ["std", "dep:tokio", "embedded-io/tokio"]
embassy-net = ["dep:smoltcp"]
