[package]
name = "cyberpixie-proto"
version = "0.1.0"
edition = "2018"

[dependencies]
displaydoc = { version = "0.2", default-features = false }
endian_codec = "0.1"
heapless = "0.7"
nb = "1.0"
postcard = { version = "0.7", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
simple-clock = "0.1"

nb-utils = { git = "https://github.com/alekseysidorov/nb-utils.git", branch = "main" }
no-stdout = "0.1.0"

[dev-dependencies]
embedded-hal = "0.2"
