[package]
name = "cyberpixie-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
displaydoc = { version = "0.2", default-features = false }
embedded-io = "0.4"
endian_codec = "0.1"
log = "0.4"
nb = "1.0"
nb-utils = { workspace = true }
postcard = { workspace = true }
postcard-derive = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }

# TODO Make proto no-std friendly.
anyhow = "1.0"

[features]
std = ["embedded-io/std"]
