[package]
name = "cyberpixie-std-transport"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cyberpixie-proto = { workspace = true }
heapless = { workspace = true }
log = "0.4"
nb = "1.0"
embedded-io = { version = "0.4.0", features = ["std"] }
