[package]
name = "cyberpixie-wifi"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
embedded-hal = { workspace = true }
embedded-svc = { workspace = true }
esp-idf-hal = { workspace = true }
esp-idf-svc = { workspace = true }
heapless = { workspace = true }
log = "0.4"
