[package]
name = "nom_parser"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
embedded-hal = "0.2"
nb = "1"
nom = "6.1"
serialport = "4"
