[package]
name = "cyberpixie-esp32-idf"
version = "0.2.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
resolver = "2"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
cyberpixie-app = { workspace = true }
cyberpixie-core = { workspace = true }
cyberpixie-network = { workspace = true }
embedded-hal = "1.0.0-alpha.10"
embedded-io = "0.4"
embedded-svc = "0.25"
esp-idf-hal = "0.41"
esp-idf-svc = "0.46"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
heapless = "0.7"
log = "0.4"
nb = "1.0"
once_cell = "1.16"
postcard = { version = "1", default-features = false, features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
smart-leds = "0.3"
std-embedded-nal = "0.1"
ws2812-esp32-rmt-driver = "0.5"

[build-dependencies]
anyhow = "1"
embuild = "0.31"
