[package]
name = "cyberpixie_esp32c3"
version = "0.1.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Hardware support
ws2812-async = { version = "0.1.0", git = "https://github.com/alekseysidorov/ws2812-async.git", rev = "1afa6b2" }
embassy-executor = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
hal = { package = "esp32c3-hal", version = "0.9.0", features = ["async", "embassy", "embassy-time-systick"] }

# Common
static_cell = "1"
heapless = { workspace = true }
smart-leds = "0.3"

# Cyberpixie
# cyberpixie-app = { workspace = true }
