[package]
name = "cyberpixie_esp32c3"
version = "0.1.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Hardware support
embassy-executor = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3", "log"] }
hal = { package = "esp32c3-hal", version = "0.9.0", features = ["async", "embassy",  "embassy-time-timg0"] }
ws2812-async = { version = "0.1.0", git = "https://github.com/alekseysidorov/ws2812-async.git", rev = "1afa6b2" }

# Wifi support
embedded-io = {version = "0.4"}
embedded-svc = { version = "0.25", default-features = false }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32c3", "embedded-svc", "wifi"] }
smoltcp = { version = "0.9.1", default-features = false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

# Common
log = "0.4"
heapless = { workspace = true }
smart-leds = "0.3"
static_cell = "1"

# Cyberpixie
# cyberpixie-app = { workspace = true }
