[package]
name = "cyberpixie_esp32c3"
version = "0.1.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Hardware support
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3", "log"] }
hal = { package = "esp32c3-hal", version = "0.9", features = ["async", "embassy", "embassy-time-timg0"] }
ws2812-async = { version = "0.1.0", git = "https://github.com/alekseysidorov/ws2812-async.git", rev = "1afa6b2" }

# Async network
embassy-executor = { version = "0.2.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = ["nightly", "tcp", "dhcpv4", "medium-ethernet", "unstable-traits"] }
embassy-sync = { version = "0.2.0", features = ["nightly"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
embedded-io = { version = "0.4", features = ["async"] }
embedded-svc = { version = "0.25", default-features = false }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "fb812ca", features = ["esp32c3", "embedded-svc", "wifi", "embassy-net"] }

# Storage
embedded-storage = "0.3"
esp-storage = { version = "0.1.0", features = ["esp32c3"] }

# Common
heapless = { workspace = true }
log = "0.4"
smart-leds = "0.3"
static_cell = "1"

# Cyberpixie
cyberpixie-app = { workspace = true }
cyberpixie-embedded-storage = { workspace = true }
