[package]
name = "cyberpixie-firmware"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2021"
resolver = "2"

[dependencies]
direct-executor = "0.3"
embedded-hal = "0.2"
embedded-sdmmc = { version = "0.3", git = "https://github.com/alekseysidorov/embedded-sdmmc-rs.git", branch = "simple_clock" }
endian_codec = "0.1"
futures = { version = "0.3", default-features = false }
heapless = "0.7"
nb = "1.0"
postcard = "0.7"
serde = { version = "1", default-features = false, features = ["derive"] }
smart-leds = "0.3"
void = { version = "1.0", default-features = false }

gd32vf103xx-hal = "0.4"
riscv = "0.6"
riscv-rt = "0.8"
ws2812-spi = { version = "0.4" }

no-stdout = { git = "https://github.com/alekseysidorov/no-stdout.git", branch = "main" }

cyberpixie = { path = "../crates/core" }
esp8266-softap = { path = "../crates/esp8266-softap" }

[features]
default = []
secondary_device = []
reset_on_start = []
dprint = ["esp8266-softap/dprint"]
