[package]
name = "cyberpixie-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
clap_complete_command = "0.5.0"
cyberpixie-core = { workspace = true }
cyberpixie-network = { workspace = true }
env_logger = "0.10"
image = "0.24"
log = "0.4"
nb = "1.0"
std-embedded-nal = "0.1.3"
