[package]
name = "cyberpixie-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
clap_complete_command = "0.5.0"
cyberpixie-network = { workspace = true, features = ["tokio"] }
env_logger = "0.10"
image = "0.24"
log = "0.4"
nb = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
