[package]
name = "cyberpixie-esp-common"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-println = { version = "0.6.0", features = ["esp32c3", "log"] }
esp32c3-hal = { workspace = true, optional = true }
esp32s3-hal = { workspace = true, optional = true }

bleps = { workspace = true }
embassy-executor = { version = "0.3.0", features = ["nightly", "integrated-timers", "executor-thread"] }
embassy-net = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-storage = "0.3"
embedded-svc = { workspace = true }
esp-storage = { version = "0.3.0" }
esp-wifi = { workspace = true }
heapless = { version = "0.7", features = ["serde"] }
log = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
smart-leds = "0.3"
static_cell = "1"
ws2812-async = { workspace = true }

# Cyberpixie
cyberpixie-app = { workspace = true }
cyberpixie-embedded-storage = { workspace = true }
cyberpixie-network = { workspace = true, features = ["embassy-net"] }

[features]
default = []
esp32c3 = ["esp-storage/esp32c3", "esp-wifi/esp32c3", "dep:esp32c3-hal"]
esp32s3 = ["esp-storage/esp32s3", "esp-wifi/esp32s3", "dep:esp32s3-hal"]
