[package]
name = "cyberpixie-esp32c3"
version = "0.3.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Hardware support
bleps = { workspace = true }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3", "log"] }
esp-wifi = { workspace = true }
hal = { package = "esp32c3-hal", version = "0.12", features = ["async", "embassy", "embassy-time-timg0"] }
ws2812-async = { workspace = true }

# Async network
embassy-executor = { workspace = true, features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-net = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
# embedded-io = { workspace = true }
# embedded-io-async = { workspace = true }
embedded-svc = { version = "0.25", default-features = false }

# Storage
embedded-storage = "0.3"
esp-storage = { version = "0.3.0", features = ["esp32c3"] }

# Common
heapless = { version = "0.7", features = ["serde"] }
log = "0.4"
smart-leds = "0.3"
static_cell = "1"

# Cyberpixie
cyberpixie-app = { workspace = true }
cyberpixie-embedded-storage = { workspace = true }
cyberpixie-esp-common = { workspace = true, features = ["esp32c3"] }
