[package]
name = "cyberpixie-esp32c3"
version = "0.3.0"
authors = ["Aleksey Sidorov <sauron1987@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Hardware support
esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32c3", "log"] }
hal = { package = "esp32c3-hal", version = "0.14", features = ["async", "embassy", "embassy-time-timg0"] }
ws2812-async = { workspace = true }

# Async network
embassy-executor = { workspace = true, features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-net = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
# embedded-io = { workspace = true }
# embedded-io-async = { workspace = true }
embedded-svc = { version = "0.26", default-features = false }

# Storage
embedded-storage = "0.3"
esp-storage = { version = "0.3.0", features = ["esp32c3"] }

# Common
heapless = { workspace = true, features = ["serde"] }
log = "0.4"
smart-leds = "0.3"
static_cell = { workspace = true }

# Portable atomics
portable-atomic.workspace = true
portable_atomic_enum.workspace = true
futures-util.workspace = true
atomic-waker.workspace = true

# Cyberpixie
cyberpixie-app = { workspace = true }
# cyberpixie-embedded-storage = { workspace = true }
cyberpixie-esp-common = { workspace = true, features = ["esp32c3"] }

embedded-hal-async = "=1.0.0-rc.2"